[gd_scene load_steps=7 format=3 uid="uid://cm75c0m4fkq0j"]

[ext_resource type="Script" path="res://entities/menu/play/save_selection_menu.gd" id="1_hh8c2"]
[ext_resource type="StyleBox" uid="uid://cctkf4pugncdx" path="res://entities/menu/default_button_style.tres" id="2_0j2k8"]
[ext_resource type="PackedScene" uid="uid://cwiv31qfcgpp1" path="res://entities/menu/play/save_file_menu.tscn" id="2_cykb1"]
[ext_resource type="StyleBox" uid="uid://d05lhiqyvpmwy" path="res://entities/menu/default_button_selected.tres" id="2_kvtqw"]
[ext_resource type="Texture2D" uid="uid://c6t8fe4n3q5j0" path="res://assets/art/icons/exit.svg" id="3_jgqbj"]
[ext_resource type="Texture2D" uid="uid://chg3tvcycxqee" path="res://assets/art/icons/file.svg" id="6_385um"]

[node name="SaveSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hh8c2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="SaveMenu" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SaveMenu"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 85

[node name="SaveFileMenu" parent="MarginContainer/SaveMenu/VBoxContainer" instance=ExtResource("2_cykb1")]
layout_mode = 2
slot_number = 1

[node name="SaveFileMenu2" parent="MarginContainer/SaveMenu/VBoxContainer" instance=ExtResource("2_cykb1")]
layout_mode = 2
slot_number = 2

[node name="SaveFileMenu3" parent="MarginContainer/SaveMenu/VBoxContainer" instance=ExtResource("2_cykb1")]
layout_mode = 2
slot_number = 3

[node name="SaveFileMenu4" parent="MarginContainer/SaveMenu/VBoxContainer" instance=ExtResource("2_cykb1")]
layout_mode = 2
slot_number = 4

[node name="SaveFileMenu5" parent="MarginContainer/SaveMenu/VBoxContainer" instance=ExtResource("2_cykb1")]
layout_mode = 2
slot_number = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
text = "Save Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = ExtResource("2_kvtqw")
theme_override_styles/pressed = ExtResource("2_kvtqw")
theme_override_styles/normal = ExtResource("2_0j2k8")
text = "Back"
icon = ExtResource("3_jgqbj")
expand_icon = true

[node name="DeleteButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = ExtResource("2_kvtqw")
theme_override_styles/pressed = ExtResource("2_kvtqw")
theme_override_styles/normal = ExtResource("2_0j2k8")
text = "Erase"
icon = ExtResource("6_385um")
expand_icon = true
